# airbytepractice

./: README.md  acceptance-test-config.yml  metadata.yaml  pyproject.toml
secrets/: config.json
src/: main.py
src/source_http_python_test/: __init__.py  run.py  source.py  spec.yaml
unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
